--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <h1>Daily Journal</h1>
-    <form action="">
-            <fieldset>
+    <form action="" class="journalForm">
+            <fieldset class="journalForm__field">
                 <label for="journalDate">Date</label>
                 <input type="date" name="journalDate" id="journalDate">
             </fieldset>
 
-            <fieldset>
+            <fieldset class="journalForm__field">
                 <label for="concepts">Concepts Covered</label>
                 <input type="text" name="concepts" id="concepts">
             </fieldset>
 
-            <fieldset>
+            <fieldset class="journalForm__field">
                 <label for="entry">Journal Entry</label>
                 <textarea name="entry" id="entry" cols="30" rows="10"></textarea>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="journalForm__field">
                 <label for="mood">Mood for the day</label>
                 <select name="mood" id="mood">
                     <option value="excited">Excited!</option>
