Added decorative fonts to .css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <h1>Daily Journal</h1>
+    <h1 class="title">Daily Journal</h1>
     <form action="" class="journalForm">
             <fieldset class="journalForm__field">
                 <label for="journalDate">Date</label>
