--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <h1 class="title">Daily Journal</h1>
     <form action="" class="journalForm">
             <fieldset class="journalForm__field">
-                <label for="journalDate">Date</label>
-                <input type="date" name="journalDate" id="journalDate">
+                <label for="journalForm__field__date">Date</label>
+                <input type="date" name="journalForm__field__date" id="journalForm__field__date">
             </fieldset>
 
             <fieldset class="journalForm__field">
-                <label for="concepts">Concepts Covered</label>
-                <input type="text" name="concepts" id="concepts">
+                <label for="journalForm__fieldconcepts">Concepts Covered</label>
+                <input type="text" name="journalForm__field__concepts" id="journalForm__field__concepts">
             </fieldset>
 
             <fieldset class="journalForm__field">
-                <label for="entry">Journal Entry</label>
-                <textarea name="entry" id="entry" cols="30" rows="10"></textarea>
+                <label for="journalForm__field__entry">Journal Entry</label>
+                <textarea name="journalForm__field__entry" id="journalForm__field__entry" cols="30" rows="10"></textarea>
             </fieldset>
 
             <fieldset class="journalForm__field">
-                <label for="mood">Mood for the day</label>
-                <select name="mood" id="mood">
+                <label for="journalForm__field__mood">Mood for the day</label>
+                <select name="journalForm__field__mood" id="journalForm__field__mood">
                     <option value="excited">Excited!</option>
                     <option value="happy">Happy</option>
                     <option value="okay">Okay I suppose</option>
