Changed css styles for form submit button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </select>
             </fieldset>
             
-            <button type="submit">Record Journal Entry</button>
+            <button type="submit" class="journalForm_submit">Record Journal Entry</button>
 
         </fieldset>
     </form>
