Added JournalEntry.js and JournalEntryList.js. Journal entries are now displayed on index.html

--- a/index.html
+++ b/index.html
@@ -1,44 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Journal</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body>
     <h1 class="title">Daily Journal</h1>
     <form action="" class="journalForm">
-            <fieldset class="journalForm__field">
-                <label for="journalForm__field__date">Date</label>
-                <input type="date" name="journalForm__field__date" id="journalForm__field__date">
-            </fieldset>
+        <fieldset class="journalForm__field">
+            <label for="journalForm__field__date">Date</label>
+            <input type="date" name="journalForm__field__date" id="journalForm__field__date">
+        </fieldset>
 
-            <fieldset class="journalForm__field">
-                <label for="journalForm__fieldconcepts">Concepts Covered</label>
-                <input type="text" name="journalForm__field__concepts" id="journalForm__field__concepts">
-            </fieldset>
+        <fieldset class="journalForm__field">
+            <label for="journalForm__fieldconcepts">Concepts Covered</label>
+            <input type="text" name="journalForm__field__concepts" id="journalForm__field__concepts">
+        </fieldset>
 
-            <fieldset class="journalForm__field">
-                <label for="journalForm__field__entry">Journal Entry</label>
-                <textarea name="journalForm__field__entry" id="journalForm__field__entry" cols="30" rows="10"></textarea>
-            </fieldset>
+        <fieldset class="journalForm__field">
+            <label for="journalForm__field__entry">Journal Entry</label>
+            <textarea name="journalForm__field__entry" id="journalForm__field__entry" cols="30" rows="10"></textarea>
+        </fieldset>
 
-            <fieldset class="journalForm__field">
-                <label for="journalForm__field__mood">Mood for the day</label>
-                <select name="journalForm__field__mood" id="journalForm__field__mood">
+        <fieldset class="journalForm__field">
+            <label for="journalForm__field__mood">Mood for the day</label>
+            <select name="journalForm__field__mood" id="journalForm__field__mood">
                     <option value="excited">Excited!</option>
                     <option value="happy">Happy</option>
                     <option value="okay">Okay I suppose</option>
                     <option value="frustrated">Frustrated</option>
                     <option value="despair">Inside the abyss of despair</option>
                 </select>
-            </fieldset>
-            
-            <button type="submit" class="journalForm_submit">Record Journal Entry</button>
+        </fieldset>
+
+        <button type="submit" class="journalForm_submit">Record Journal Entry</button>
 
         </fieldset>
     </form>
+    <section class="journalEntries">
+
+    </section>
     <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
