Journal entries now show at the bottom

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </fieldset>
     </form>
     <section class="journalEntries">
-
+        <h1 class="title">Journal Entries</h1>
     </section>
     <script type="module" src="./scripts/main.js"></script>
 </body>
